--- a/index.html
+++ b/index.html
@@ -5,126 +5,253 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amir Hussain Shaik - Portfolio</title>
     <style>
-        /* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
-}
+        /* General Styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+            background: linear-gradient(to bottom, #e3f2fd, #bbdefb);
+        }
 
-/* Body Styling */
-body {
-    background-color: #f5f7fa;
-    color: #333;
-    line-height: 1.6;
-}
+        header {
+            background: url('header-bg.jpg') no-repeat center center/cover;
+            color: #fff;
+            text-align: center;
+            padding: 4rem 1rem;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
 
-/* Header Styling */
-header {
-    background: #004080;
-    color: #fff;
-    padding: 1rem 0;
-    text-align: center;
-}
+        header h1 {
+            margin: 0;
+            font-size: 3.5rem;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+        }
 
-header h1 {
-    font-size: 2.5rem;
-}
+        header p {
+            margin-top: 1rem;
+            font-size: 1.6rem;
+        }
 
-header p {
-    font-size: 1.2rem;
-}
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #1a237e;
+            padding: 1rem 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
 
-/* Navigation Styling */
-nav {
-    display: flex;
-    justify-content: center;
-    background: #003366;
-    padding: 0.5rem 0;
-}
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 0.8rem 1.5rem;
+            font-size: 1.1rem;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background 0.3s, transform 0.3s;
+        }
 
-nav a {
-    color: #fff;
-    text-decoration: none;
-    margin: 0 1rem;
-    font-size: 1.1rem;
-    transition: color 0.3s;
-}
+        nav a:hover {
+            background-color: #3949ab;
+            transform: scale(1.1);
+        }
 
-nav a:hover {
-    color: #f0a500;
-}
+        section {
+            padding: 2.5rem;
+            margin: 2rem auto;
+            max-width: 1000px;
+            background: #ffffff;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+        }
 
-/* Main Section Styling */
-main {
-    padding: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-}
+        section h2 {
+            color: #1a237e;
+            border-bottom: 3px solid #3949ab;
+            padding-bottom: 0.5rem;
+            margin-bottom: 2rem;
+            font-size: 2.2rem;
+        }
 
-main section {
-    margin-bottom: 2rem;
-    padding: 1.5rem;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
+        /* About Section Styling */
+        .about-section {
+            background-color: #e3f2fd;
+            padding: 3rem 2rem;
+        }
 
-main section h2 {
-    color: #004080;
-    margin-bottom: 1rem;
-}
+        .about-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            gap: 2rem;
+        }
 
-/* Skills Section */
-.skills {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1rem;
-}
+        .about-content {
+            flex: 1 1 50%;
+            max-width: 600px;
+            text-align: justify;
+        }
 
-.skills div {
-    background: #f0f0f0;
-    padding: 1rem;
-    border-radius: 8px;
-    text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+        .about-content h2 {
+            color: #3949ab;
+            font-size: 2.4rem;
+        }
 
-/* Project Section */
-.projects img {
-    width: 100%;
-    border-radius: 8px;
-    margin-top: 1rem;
-}
+        .about-content p {
+            line-height: 1.8;
+            font-size: 1.2rem;
+            color: #444;
+        }
 
-/* Footer Styling */
-footer {
-    background: #003366;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-    margin-top: 2rem;
-}
+        .about-image {
+            flex: 1 1 40%;
+            max-width: 400px;
+        }
 
-footer p {
-    font-size: 0.9rem;
-}
+        .about-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s;
+        }
 
-@media (max-width: 768px) {
-    header h1 {
-        font-size: 2rem;
-    }
+        .about-image img:hover {
+            transform: scale(1.1);
+        }
 
-    nav a {
-        margin: 0 0.5rem;
-        font-size: 1rem;
-    }
+        /* Skills Section Styling */
+        #skills {
+            padding: 3rem 1.5rem;
+            background-color: #f1f8e9;
+            color: #2e7d32;
+        }
 
-    main {
-        padding: 1rem;
-    }
-}
+        #skills h2 {
+            font-size: 2.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1.5rem;
+        }
+
+        .skill-item {
+            padding: 1.5rem;
+            background-color: #ffffff;
+            border: 2px solid #aed581;
+            border-radius: 10px;
+            text-align: center;
+            font-size: 1.1rem;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .skill-item:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Experience Section Styling */
+        #experience {
+            background-color: #ede7f6;
+            color: #5e35b1;
+            padding: 3rem 1.5rem;
+        }
+
+        #experience h2 {
+            font-size: 2.2rem;
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+
+        .job {
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        .job h3 {
+            font-size: 1.6rem;
+            color: #3949ab;
+            margin-bottom: 1rem;
+        }
+
+        .job p {
+            font-size: 1.1rem;
+            color: #444;
+            text-align: justify;
+        }
+
+        /* Project Section Styling */
+        #projects {
+            padding: 3rem 1.5rem;
+            background-color: #fff3e0;
+            color: #ff8f00;
+        }
+
+        #projects h2 {
+            font-size: 2.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .project-item {
+            background: #ffffff;
+            border: 1px solid #ffe0b2;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+        .project-item img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-bottom: 1px solid #ffe0b2;
+        }
+
+        .project-item:hover {
+            transform: scale(1.05);
+        }
+
+        .project-item h3 {
+            font-size: 1.5rem;
+            color: #ff8f00;
+            margin: 1rem;
+        }
+
+        .project-item p {
+            font-size: 1.1rem;
+            color: #444;
+            margin: 1rem;
+        }
+
+        /* Footer Styling */
+        footer {
+            text-align: center;
+            padding: 1.5rem;
+            background-color: #1a237e;
+            color: #fff;
+        }
+
+        footer a {
+            color: #ffcc80;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
